test-connection-checker.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-connection
  labels:
    app: test-connection
spec:
  containers:
  - name: test-connection
    image: ziniz/connection-checker:v3
    imagePullPolicy: IfNotPresent
    command: ["./app"]
    args: ["nginx-service","default","3000"]
    ports:
    - containerPort: 80
