service-manager-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-manager
  labels:
    app: service-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-manager
  template:
    metadata:
      name: service-manager
      labels:
        app: service-manager
    spec:
      serviceAccountName: service-manager
      containers:
      - name: service-manager
        image: ziniz/service-manager:v6
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-manager-service
  labels:
    app: service-manager
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: service-manager
  externalName: service-manager.default.svc.cluster.local
